k8s/local/helloworld-np/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world
  name: hello-world-deployment
  namespace: mysecurizedns
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-world
  strategy:
    type: Replace
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: asinatra/secure:v1.0.3
        imagePullPolicy: IfNotPresent
        name: hello-world
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 5000
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 80m
            memory: 128Mi
      restartPolicy: Always
