k8s/local/helloworld-np/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowsome-ingress
spec:
  podSelector:
    matchLabels:
      app: debug
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: namespace
          operator: In
          values: ["asinatra", "mjust"]
