k8s/local/helloworld-np/ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
namespace: mysecurizedns
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
